[gd_scene load_steps=16 format=3 uid="uid://5lyf04rwo1mf"]

[ext_resource type="Script" path="res://example/eventsub_chat.gd" id="1_pvhqt"]
[ext_resource type="Script" path="res://addons/twitcher/twitch_service.gd" id="2_5ubu1"]
[ext_resource type="Resource" uid="uid://jhyuw0w216ix" path="res://addons/twitcher/default_oauth_setting.tres" id="3_d0q0w"]
[ext_resource type="Resource" uid="uid://hqh5x62qipk8" path="res://example/chat_scopes.tres" id="4_wpyv0"]
[ext_resource type="Resource" uid="uid://bjtnrj1x7nbo8" path="res://addons/twitcher/default_oauth_token.tres" id="5_cneyv"]
[ext_resource type="Script" path="res://addons/twitcher/twitch_auth.gd" id="6_2pnhe"]
[ext_resource type="Script" path="res://addons/twitcher/eventsub/twitch_eventsub.gd" id="7_itbs2"]
[ext_resource type="Script" path="res://addons/twitcher/eventsub/twitch_eventsub_config.gd" id="8_gya36"]
[ext_resource type="Script" path="res://addons/twitcher/generated/twitch_api.gd" id="9_otx6d"]
[ext_resource type="Script" path="res://addons/twitcher/lib/http/http_client_manager.gd" id="10_8md5e"]
[ext_resource type="Script" path="res://addons/twitcher/twitch_media_loader.gd" id="11_aprrr"]
[ext_resource type="PackedScene" uid="uid://cinvytmtixgwu" path="res://addons/twitcher/chat/twitch_chat.tscn" id="12_5f2sm"]
[ext_resource type="PackedScene" uid="uid://b0ebhuv2yaow0" path="res://addons/twitcher/lib/http/DebugBufferedHttpClient.tscn" id="13_s3iu0"]

[sub_resource type="Resource" id="Resource_w27np"]
script = ExtResource("8_gya36")
type = 9
condition = {
"broadcaster_user_id": "132799162",
"user_id": "132799162"
}

[sub_resource type="LabelSettings" id="LabelSettings_2vgfi"]
font_size = 36
font_color = Color(0.956209, 0, 0.289367, 1)

[node name="Chat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pvhqt")

[node name="TwitchService" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_5ubu1")
oauth_setting = ExtResource("3_d0q0w")
scopes = ExtResource("4_wpyv0")
token = ExtResource("5_cneyv")

[node name="Auth" type="Node" parent="TwitchService"]
script = ExtResource("6_2pnhe")
oauth_setting = ExtResource("3_d0q0w")
token = ExtResource("5_cneyv")
scopes = ExtResource("4_wpyv0")

[node name="EventSub" type="Node" parent="TwitchService" node_paths=PackedStringArray("api")]
script = ExtResource("7_itbs2")
api = NodePath("../API")
_subscriptions = Array[ExtResource("8_gya36")]([SubResource("Resource_w27np")])
scopes = ExtResource("4_wpyv0")

[node name="API" type="Node" parent="TwitchService" node_paths=PackedStringArray("http_client_manager")]
script = ExtResource("9_otx6d")
default_broadcaster_login = "kani_dev"
token = ExtResource("5_cneyv")
oauth_setting = ExtResource("3_d0q0w")
http_client_manager = NodePath("../HttpClientManager")

[node name="HttpClientManager" type="Node" parent="TwitchService"]
script = ExtResource("10_8md5e")

[node name="MediaLoader" type="Node" parent="TwitchService" node_paths=PackedStringArray("api", "http_client_manager")]
script = ExtResource("11_aprrr")
api = NodePath("../API")
http_client_manager = NodePath("../HttpClientManager")
image_transformer = "MagicImageTransformer"
image_magic_path = "magick"

[node name="TwitchChat" parent="." node_paths=PackedStringArray("twitch_service") instance=ExtResource("12_5f2sm")]
unique_name_in_owner = true
twitch_service = NodePath("../TwitchService")
target_user_channel = "kani_dev"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="ChatContainer" type="VBoxContainer" parent="HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Control/ChatContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChatContainer" type="VBoxContainer" parent="HBoxContainer/Control/ChatContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InputContainer" type="HBoxContainer" parent="HBoxContainer/Control/ChatContainer"]
layout_mode = 2

[node name="InputLine" type="LineEdit" parent="HBoxContainer/Control/ChatContainer/InputContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Send" type="Button" parent="HBoxContainer/Control/ChatContainer/InputContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Send"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DebugBufferedHttpClient" parent="HBoxContainer/VBoxContainer" node_paths=PackedStringArray("http_client_manager") instance=ExtResource("13_s3iu0")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
http_client_manager = NodePath("../../../TwitchService/HttpClientManager")

[node name="ConfigurationWarning" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -514.5
offset_top = -25.0
offset_right = 514.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.359557
pivot_offset = Vector2(514, 25)
text = "Please configure client credentials according to the readme"
label_settings = SubResource("LabelSettings_2vgfi")
horizontal_alignment = 1
vertical_alignment = 1
